1. Partial update for user defined languages. 2. Fixed totals not showing - previuous input expected languages object from daily logs sum. minor changes

--- a/styles.css
+++ b/styles.css
@@ -544,6 +544,7 @@ header {
   text-align: center;
   width: max-content;
   max-width: 80vw;
+  z-index: 100;
 }
 
 #snack-bar.showSnack {
